# aido-bridge

./: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
config/: fastrtps-udp-only.xml
src/aido_bridge/: main.py  ros_node.py  state.py
tests/: test_api.py
